--- a/public/css/style.css
+++ b/public/css/style.css
@@ -283,11 +283,11 @@ body.symbolsPage .general .dropsymbol{
     background: #444;
     color: #fff;
     font-size: 13px;
-    padding-left:10px; 
-    padding-right:10px; 
-    padding-top:3px; 
+    padding-left:10px;
+    padding-right:10px;
+    padding-top:3px;
     padding-bottom:3px;
-    border-radius: 5px; 
+    border-radius: 5px;
 }
 body.symbolsPage .card{
     padding:10px;
@@ -313,7 +313,7 @@ body.symbolsPage .card .info .category{
     padding: 0 4px;
     background: #777;
     border-radius: 2px;
-    
+
     font-size: 10px;
 }
 button.no-bg{
@@ -589,7 +589,7 @@ button.no-bg{
     border-bottom-right-radius : 5px!important;
 }
 .input--2{
-    border-radius: 0px!important; 
+    border-radius: 0px!important;
     border-top-left-radius : 5px!important;
     border-bottom-left-radius : 5px!important;
 }
@@ -660,8 +660,8 @@ button.no-bg{
     border-bottom: 1px solid #eee;
 }
 .ul--sidebar--create li {
-    padding-top: 5px; 
-    padding-bottom: 5px; 
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 .ul--sidebar--create li a{
     color:#A2A2AA!important;
@@ -693,8 +693,8 @@ button.no-bg{
     border-bottom: 1px solid #eee;
 }
 .ul--sidebar--overview li {
-    padding-top: 5px; 
-    padding-bottom: 5px; 
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 .naav--tabs--overview{
     border-bottom: none;
@@ -718,8 +718,8 @@ button.no-bg{
     padding-top: 20px;
 }
 .ul--sidebar--overview-2 li {
-    padding-top: 5px; 
-    padding-bottom: 5px; 
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 .tab2-row{
     background-color: #F8F8F8;
@@ -960,7 +960,7 @@ body.projectPage a.pen{
 }
 .projects_tabs ul li.tab.active{
     background: #fff;
-    padding:10px 26px 10px 26px;   
+    padding:10px 26px 10px 26px;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
     border:1px solid #eee;
@@ -1036,7 +1036,7 @@ td .projects-list-right ul li a{
     height: 30vh;
     text-align: center;
     align-items: center;
-    
+
 }
 .creditcard_section .creditcard{
     font-size: 25px;
@@ -1077,7 +1077,7 @@ span.symbol .svg-inline--fa.fa-w-14{
     border: none!important;
     color: #337AB7!important;
     font-size: 14px;
-    margin-top: 10px; 
+    margin-top: 10px;
 }
 button.creditcard{
     margin-top: 75px;
@@ -1198,7 +1198,7 @@ button.todo_date_btn{
 }
 .worksheetPage .panel .panel-title{
     font-size: 16px;
-    font-weight: 600;    
+    font-weight: 600;
 }
 .worksheetPage .panel .panel-body{
 }
@@ -1528,7 +1528,7 @@ section#pagination .btn-white {
     -webkit-box-shadow: 0px 10px 10px 0px rgba(250,250,250,0.76);
     -moz-box-shadow: 0px 10px 10px 0px rgba(250,250,250,0.76);
     box-shadow: 0px 10px 10px 0px rgba(250,250,250,0.76);
-    
+
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
@@ -1644,8 +1644,8 @@ section.stages{
     margin-top: 30px;
 }
 .exports--div{
-    background-color: #F8F8F8; 
-    border: 1px solid #e0e0e0; 
+    background-color: #F8F8F8;
+    border: 1px solid #e0e0e0;
     border-radius: 5px;
     padding: 10px;
 }
@@ -1686,7 +1686,7 @@ h1.slim{
 .todo-task-header h2{
    font-weight: 300;
    font-size: 24px;
-   line-height: 24px; 
+   line-height: 24px;
 }
 button.caret i, button.caret svg{
     transform: rotate(90deg);
@@ -1816,7 +1816,7 @@ button.caret i, button.caret svg{
     border-bottom-right-radius: 0;
     height: 48px;
 }
-.takeoffDetailsPage .tab ul li a svg{ 
+.takeoffDetailsPage .tab ul li a svg{
     color: #337ab7;
     cursor: pointer;
 }
@@ -1854,7 +1854,7 @@ button.caret i, button.caret svg{
     font-size: 14px;
     margin-left: 10px;
     display: none;
-}   
+}
 .takeoffDetailsPage .third .left .field-body .link-with-hover-icon:hover svg{
     display: inline-block;
 }
@@ -1889,7 +1889,7 @@ button.caret i, button.caret svg{
 }
 button.bg-grey{
     background:#E9E9E9;
-    border:1px solid #E9E9E9; 
+    border:1px solid #E9E9E9;
     color: #555;
 }
 option.disabledPackTitles{
@@ -1907,7 +1907,7 @@ option.disabledPackTitles{
     width: 100%!important;
     background: #F1F1F1!important;
     height: auto!important;
-    padding: 15px; 
+    padding: 15px;
     display: none;
 }
 .scCustom #flex
@@ -2145,4 +2145,9 @@ option.disabledPackTitles{
 .bs-tooltip-bottom .arrow::before {
   border-bottom-color: #f00;
   /* Red */
+}
+
+.past_due {
+    color: #f0ad4e;
+    font-size: 45px!important;
 }
